# GVirtuS

gvirtus/: config.h.in
gvirtus.cublas/backend/: Makefile.am
gvirtus.cudadr/: config.h.in
gvirtus.cudadr/backend/: Makefile.am
gvirtus.cudadr/backend/.deps/: CudaDrBackend.Plo  CudaDrHandler.Plo
gvirtus.cudadr/frontend/.deps/: CudaDrFrontend.Plo  CudaDr_context.Plo  CudaDr_device.Plo  CudaDr_event.Plo  CudaDr_execution.Plo  CudaDr_initialization.Plo  CudaDr_memory.Plo  CudaDr_module.Plo  CudaDr_stream.Plo  CudaDr_texture.Plo  CudaDr_version.Plo
gvirtus.cudadr/util/.deps/: CudaUtil.Po
gvirtus.cudart/: config.h.in
gvirtus.cudart/backend/: CudaRtHandler_opengl.cpp  Makefile.am
gvirtus.cudart/backend/.deps/: CudaRtHandler.Plo
gvirtus.cudart/frontend/: CudaRt_opengl.cpp  Makefile.am
gvirtus.cudart/util/: Makefile.am
gvirtus.cudart/util/.deps/: CudaUtil.Po
gvirtus.cufft/: config.h.in
gvirtus.cufft/backend/: Makefile.am
gvirtus.cufft/frontend/: Makefile.am
gvirtus.opencl/backend/: Makefile.am
gvirtus/backend/: Makefile.am
gvirtus/backend/.deps/: gvirtus_backend-Backend.Po  gvirtus_backend-Process.Po  gvirtus_backend-main.Po
gvirtus/conf/: Makefile  Makefile.in
gvirtus/frontend/: Makefile.am
gvirtus/frontend/.deps/: libgvirtus_frontend_la-Frontend.Plo
gvirtus/util/.deps/: AfUnixCommunicator.Po  Buffer.Po  Communicator.Po  ConfigFile.Po  Mutex.Po  Observable.Po  Observer.Po  Result.Po  ShmCommunicator.Po  Subprocess.Po  TcpCommunicator.Po  Thread.Po  Util.Po  VMShmCommunicator.Po  VMSocketCommunicator.Po  VirtioCommunicator.Po
